@@ -110,7 +110,7 @@ env = Environment(CPPFLAGS = '-x',
                   CC = r'%s mygcc.py cc',
                   CXX = r'%s mygcc.py c++',
                   F77 = r'%s mygcc.py g77')
-env.Program(target = 'foo', source = 'test1.c test2.cpp test3.F')
+env.Program(target = 'foo', source = Split('test1.c test2.cpp test3.F'))
 """ % (python, python, python, python))
 
 test.write('test1.c', r"""test1.c
