@@ -39,7 +39,7 @@ env = Environment()
 f1 = env.Object(target = 'f1', source = 'f1.c')
 f2 = env.Object(target = 'f2', source = 'f2.cpp')
 f3 = env.Object(target = 'f3', source = 'f3.c')
-env.Program(target = 'prog1', source = 'f1%s f2%s f3%s prog.cpp')
+env.Program(target = 'prog1', source = Split('f1%s f2%s f3%s prog.cpp'))
 env.Program(target = 'prog2', source = [f1, f2, f3, 'prog.cpp'])
 env.Program(target = 'prog3', source = ['f1%s', f2, 'f3%s', 'prog.cpp'])
 """ % (_obj, _obj, _obj, _obj, _obj))
